[package]
name = "rust-auth-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
jsonwebtoken = "9"
once_cell = "1.19"
dotenv = "0.15"
chrono = "0.4"

